fix: gap between images is now smaller when there are few and color and capacity now shows current data

--- a/src/modules/ProductDetailsPage/components/ProductDetailsPage/ProductDetailsPage.module.scss
+++ b/src/modules/ProductDetailsPage/components/ProductDetailsPage/ProductDetailsPage.module.scss
@@ -313,7 +313,10 @@
 
     &__images {
       flex-direction: column;
+      gap: 48px;
       height: auto;
+      width: auto;
+      justify-content: center;
     }
 
     &__container {
